@@ -16,18 +16,23 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>
  */
 
-apply plugin: "com.android.application"
+plugins {
+    id "com.android.application"
+    id "kotlin-android"
+    id "kotlin-allopen"
+    id "jacoco"
+}
 
-apply from: "jacoco.gradle"
-apply plugin: "kotlin-android"
-apply plugin: "kotlin-allopen"
+apply {
+    from "jacoco.gradle"
+}
 
 // dependencies -------------------------------------------------
 dependencies {
     // Compile Build Dependencies
     implementation fileTree(include: ["*.jar"], dir: "libs")
     implementation 'com.google.android.material:material:1.12.0'
-    implementation 'androidx.annotation:annotation:1.8.2'
+    implementation 'androidx.annotation:annotation:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'androidx.collection:collection-ktx:1.4.4'
     implementation 'androidx.core:core-ktx:1.13.1'
@@ -42,7 +47,7 @@ dependencies {
     testImplementation 'androidx.test.ext:junit:1.2.1'
     testImplementation 'com.googlecode.junit-toolbox:junit-toolbox:2.4'
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.mockito:mockito-core:5.14.1'
+    testImplementation 'org.mockito:mockito-core:5.14.2'
     testImplementation 'org.mockito.kotlin:mockito-kotlin:5.4.0'
     testImplementation 'org.robolectric:robolectric:4.13'
     testImplementation "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
@@ -97,6 +102,7 @@ android {
         unitTests {
             includeAndroidResources true
             all {
+                jvmArgs("-XX:+EnableDynamicAgentLoading")
                 testLogging {
                     events "passed", "skipped", "failed", "standardOut", "standardError"
                     outputs.upToDateWhen { false }
